# kitchen-platform

./: .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  Makefile  README.md  index.html  mkdocs.yml  requirements-docs.txt  sitemap.xml
.github/: serving-smoke.sh
.github/workflows/: docs.yml  kitchen-ci.yml  ml-pipeline.yml  publish.yml  recipes-ci.yml  release.yml  secret-scan.yml
docs/: index.md  quickstart.md
docs/kitchen/: api-stability.md  aws-deployment.md  ci-cd.md  configuration.md  data-versioning.md  experiment-tracking.md  index.md  kaggle-quickstart.md  lambda-tutorial.md  lifecycle.md  menu.schema.json  model-serving.md  modeling.md  monitoring.md  orchestration.md  quickstart.md  troubleshooting.md
docs/recipes/: ci-cd.md  index.md  quickstart.md  recipe.schema.json  yaml-spec.md
examples/: README.md  cbb_dashboard_params.py  cbb_diff_feature_importance.py  cbb_param_sweep.py  loto_cv_example.py  multi_source_features.py  validate_persistent_backend.py
examples/offline-quickstart/: .gitignore  README.md  menu.yaml  params.yaml
examples/offline-quickstart/src/evaluate/: run.py
examples/offline-quickstart/src/features/: run.py
examples/persistent-backend/: .gitignore  README.md  menu.yaml
examples/persistent-backend/data/raw/: train.csv
examples/persistent-backend/src/train/: run.py
examples/spaceship-titanic/: .gitignore  README.md  menu.yaml
examples/spaceship-titanic/data/: make_sample.py
examples/spaceship-titanic/data/raw/: sample_submission.csv  test.csv  train.csv
examples/spaceship-titanic/flows/: generate_submission.py
examples/spaceship-titanic/src/evaluate/: run.py
examples/spaceship-titanic/src/features/: run.py
examples/spaceship-titanic/src/train/: run.py
infra/: README.md  ci-role-policy.json.tmpl  verify-ci-policy.sh
kitchen/: .pylintrc  README.md  index.html  menu.schema.json  mlflow.db  mlruns_test.db  pyproject.toml
kitchen/aws-deployment/: index.html
kitchen/ci-cd/: index.html
kitchen/configuration/: index.html
kitchen/data-versioning/: index.html
kitchen/experiment-tracking/: index.html
kitchen/flows/: train_flow.py
kitchen/kaggle-quickstart/: index.html
kitchen/kitchen/: __init__.py  cli.py  config.py  experiment.py  holdout.py  menu.py  menu_resolve.py  menu_run.py  modeling.py  monitoring.py  notebook.py  registry.py  runstore.py  search.py  secrets.py  steps.py  store.py  submit.py  tracking.py
kitchen/kitchen/_cli/: _templates.py  dvc.py  experiments.py  run.py  serve.py
kitchen/kitchen/flows/: monitor_flow.py  train_flow.py
kitchen/kitchen/ingest/: __init__.py  external.py  run.py
kitchen/kitchen/recipes/: cli.py  menu.py  schema.py
kitchen/kitchen/recipes/generators/: __init__.py  ecr.py  iam.py  lambda_.py  rds.py  s3.py  security_group.py
kitchen/kitchen/recipes/templates/: ecr.tf.j2  rds.tf.j2  s3.tf.j2  security_group.tf.j2
kitchen/kitchen/serve/: Dockerfile  __init__.py  app.py  loader.py
kitchen/lambda-tutorial/: index.html
kitchen/lifecycle/: index.html
kitchen/model-serving/: index.html
kitchen/modeling/: index.html
kitchen/monitoring/: index.html
kitchen/orchestration/: index.html
kitchen/quickstart/: index.html
kitchen/tests/: conftest.py  test_check.py  test_ci_policy.py  test_cli.py  test_command_stage.py  test_config.py  test_evaluate.py  test_example_offline.py  test_experiment.py  test_experiments.py  test_external.py  test_generic_sweep.py  test_holdout.py  test_ingest.py  test_ingest_cmd.py  test_ingest_run.py  test_menu.py  test_menu_resolve.py  test_menu_run.py  test_menu_schema_export.py  test_modeling.py  test_monitor_flow.py  test_monitoring.py  test_notebook.py  test_public_api.py  test_push.py  test_registry.py  test_report.py  test_runstore.py  test_scaffold_golden.py  test_score.py  test_search.py  test_secrets.py  test_serve.py  test_serve_batch.py  test_serve_loader.py  test_serve_local.py  test_serve_metadata.py  test_serve_typed.py  test_stage_loader.py  (+8 more)
kitchen/tests/fixtures/scaffold/: baseline-xgb-kaggle-ci.json  binary-cls-local.json  pipeline-kaggle.json  pipeline-local.json
kitchen/tests/recipes/: test_bootstrap.py  test_cli.py  test_generators.py  test_menu.py  test_schema.py  test_schema_export.py
kitchen/troubleshooting/: index.html
notebooks/exploration/: exploration.ipynb  index.html
quickstart/: index.html
recipes/: .pylintrc  index.html  mlflow.db  pyproject.toml  recipe.schema.json
recipes/ci-cd/: index.html
recipes/examples/: ecr-lambda-inference-api.yaml  kaggle-serving-stack.yaml  mlflow-artifacts.yaml  mlflow-backend-validation.yaml  mlflow-tracking-backend.yaml  s3-data-bucket.yaml
recipes/quickstart/: index.html
recipes/recipes/: cli.py  menu.py  schema.py
recipes/recipes/generators/: __init__.py  ecr.py  iam.py  lambda_.py  rds.py  s3.py  security_group.py
recipes/recipes/templates/: iam_role.tf.j2  lambda.tf.j2  provider.tf.j2  rds.tf.j2
recipes/tests/: test_bootstrap.py  test_cli.py  test_generators.py  test_menu.py  test_schema.py  test_schema_export.py
recipes/yaml-spec/: index.html
search/: search_index.json
