[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rkoren-kitchen"
version = "0.1.0"
description = "Reusable MLOps framework: data ingestion, experiment tracking, serving, and monitoring"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Reilly Koren", email = "reillyhkoren@gmail.com"},
]
keywords = ["mlops", "mlflow", "prefect", "dvc", "kaggle", "machine-learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # CLI
    "typer>=0.12",
    # Provisioning (recipes → Terraform); folded in at the INT-013 package merge.
    # NOTE: pandas/numpy/mlflow/… below stay in base for now — the base-vs-[ml] split is
    # INT-013b (needs a lazy-import refactor of kitchen/__init__.py, not a mechanical move).
    "pydantic>=2.0",
    "jinja2>=3.1",
    "rich>=13.0",
    # Data
    "pandas>=2.0",
    "pyarrow>=14.0",
    # ML
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "xgboost>=2.0",
    "lightgbm>=4.0",
    # Experiment tracking
    "mlflow>=3.0",
    "boto3>=1.34",
    # Monitoring — in-house drift stats (KS / chi-square / PSI), no heavy dep.
    "scipy>=1.10",
    # Orchestration
    "prefect>=3.0",
    # Data ingestion
    "kaggle>=1.6",
    # Params
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dvc = [
    "dvc[s3]>=3.0",
]
serve = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "mangum>=0.17",
]
search = [
    "optuna>=3.0",
]
postgres = [
    # DBAPI driver for a PostgreSQL MLflow backend store (the persistent-champion path,
    # LML-012). MLflow/SQLAlchemy need this to connect to a postgresql:// tracking URI.
    "psycopg2-binary>=2.9",
]
dev = [
    "pytest>=8.0",
    "pytest-cov",
    "fastapi>=0.110",  # for test_serve.py TestClient
    "httpx",
    "optuna>=3.0",  # for test_search.py bayes_search coverage
    "ruff",
    "jsonschema>=4.0",  # recipes schema round-trip validation (tests/recipes/test_schema_export.py)
]

[project.urls]
Homepage = "https://github.com/rkoren/kitchen-platform"
Repository = "https://github.com/rkoren/kitchen-platform"
Issues = "https://github.com/rkoren/kitchen-platform/issues"

[project.scripts]
kitchen = "kitchen.cli:main"
# Back-compat alias for standalone provisioning use (INT-012 ADR). menu_run still shells out
# to `recipes` until INT-017 makes provisioning in-process, so this entry point is load-bearing.
recipes = "kitchen.recipes.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["kitchen"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=kitchen --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[dependency-groups]
dev = [
    "pylint>=4.0.5",
    "pytest-randomly>=4.1.0",
]
